[tool.poetry]
name = "mek-scraper"
version = "0.1.0"
description = ""
authors = ["Balázs Bartl <balazs.bartl@aliz.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
